--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 renv/*
-.Rproj.user
-.Rhistory
-.Rprofile
-renv.lock
+
+*.Rproj.user
+*.Rhistory
+*.Rprofile
+*.lock
 .Rproj.user/8AAAC5C2/sources/s-BF01FD0A/EE9F2C3A-contents
