--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,44 @@
-renv/*
+  
+# History files
+.Rhistory
+.Rapp.history
 
-*.Rproj.user
-*.Rhistory
-*.Rprofile
-*.lock
-.Rproj.user/8AAAC5C2/sources/s-BF01FD0A/EE9F2C3A-contents
+# Session Data files
+.RData
+
+# User-specific files
+.Ruserdata
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+
+# translation temp files
+po/*~
